Modernized: Replaced Arrays.asList([]) by List.of([])